assets/css/global.css
body {
	padding-bottom: 3em;
}

cite {
 font-style: initial;
}
/*
** Font
*/


.nav-link {
    z-index: 99999999;
}
@media only screen and (min-width: 767px) {
    .spacer {
        padding: 4em;
    }
}

@font-face {
    font-family: 'butlerregular';
    src: url('/assets/fonts/butler_regular-webfont.woff2') format('woff2'),
         url('/assets/fonts/butler_regular-webfont.woff') format('woff');
}

@font-face {
    font-family: 'butlermedium';
    src: url('/assets/fonts/butler_medium-webfont.woff2') format('woff2'),
         url('/assets/fonts/butler_medium-webfont.woff') format('woff');
}

@font-face {
    font-family: 'arconregular';
    src: url('/assets/fonts/Arcon-Regular.otf') format('opentype');
}

/* Main page\
#ffccb3`
*/

.btn {
	transition: font-size 1s;
}

.btn-outline-success {
    color: #ffcc03;
    background-color: transparent;
    background-image: none;
    border-color: #ffcc03;
}

#main-logo {
    width: 64px;
    height: 64px;
    -webkit-transition: width 1s, height 1s; /* For Safari 3.1 to 6.0 */
    transition: width 1s, height 1s;
}

@media screen and (max-width: 768px) {
  .logo {
    max-width: 32px;
    max-height: 32px;
  }


  a.logo, #main-logo {
      display: none;
  }
}

.letter-bg {
    background-image: url("/assets/imgs/img.png");
    background-size: 70px;
    background-repeat: repeat;
    font-size: 20px;
    line-height: 40px;
}

.justify {
    text-align: justify;
}

#main-page {
}

.bck-ghost {
    position: absolute;
    width: 100vh;
    height: 100vh;
    top: 0;
    left: 0;
}

.cover-bck {
    height: 100%;
    background-color: red;
    width: 100%;
    left: 0px;
}

.btn-outline-success {
    color: #f6f3e1;
    background-color: transparent;
    background-image: none;
    background-color: #ffccb3;
    border: none;
    border-radius: 50px;
    padding: 0.7em 2em;
}

.ghost-body {
    width: 100%;
    position: absolute;
    left: 0;
    background-image: url('../imgs/index_3.jpg');
    height: 205px;
    background-size: cover;
    margin-top: -50px;
}

.index-param { /* gi_land */
    text-align: center;
    line-height: 1em;
}

.index-param > p {
    text-align: center;
    line-height: 1.2em;
}

.index-param > img {
    margin: 0px auto 0px auto;
    width: 30%;
}

.index-h3 {
    text-align: left !important;
}
.index-h3-right {
    text-align: right !important;
}

html {
    position: relative;
    min-height: 100%;
}

.digiths {
    margin-left: -4.5em !important;
    margin-right: -4.5em !important;
    box-shadow: 0 2px 3px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
}

.digiths > div {
    color: #f6f3e1;
    padding: 2em 2em 2em 2em;
    font-family: 'fantasy', sans-serif;
    text-align: center;
    margin-top: -49px;
}

.number-wrap {
    display: inline-block;
    max-width: 100px;
}

body {
    background-color: #f6f3e1;
}

.onepage {
    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
       -moz-animation: fadein 2s; /* Firefox < 16 */
        -ms-animation: fadein 2s; /* Internet Explorer */
         -o-animation: fadein 2s; /* Opera < 12.1 */
            animation: fadein 2s;
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}


a {
    color: #97838f;
}

/*
header
*/


.header {
    padding:1em 2em;
    transition: .5s all;
}

.dropdown-menu {
    background: #f6f3e1;
    border: none;
    min-width: 215px;
}

.dropdown-item {
    padding: 0.4em 1em;
    color: #98838f;
    font-size: 1.2rem;
    transition: .5s padding-left;
}

.dropdown-toggle::after {
    content: none;
}

a {
    transition: color 0.3s;
}

a:hover, .dropdown-item:hover {
    background-color: transparent;
    color: #ffccb3;
}
.dropdown-item:focus, .dropdown-item:hover {
    background-color: transparent;
}

/*
end header
*/


/*
Container padding
*/

@media only screen and (max-height: 767px) {
  .navbar-toggler {
    padding: initial;
  }
}
@media only screen and (max-height: 850px) {
  .body-content > .onepage:nth-child(1) {
      padding-top: 10vh;
  }

  .main-img {
  	width: 80%;
  }

}

@media only screen and (min-height: 80px) {
  p {
    line-height: 1.1em;
  }
  .main-img {
  	width: 75%;
  }
}

@media only screen and (min-height: 851px) {
  p {
    line-height: 1.6em;
  }
  .body-content > .onepage:nth-child(1) {
      padding-top: 8vh;
  }

  .main-img {
  	width: 100%;
  }
}

@media screen and (min-height: 900px) {

  p {
    line-height: 1.8em;
  }

}

.main-img {
    margin: auto;
    display: block;
}

.onepage {
    padding-top:10vh;
    min-height: 80vh;
}

/*
End container padding
*/

/*
 * blockquote
*/

blockquote {
    margin: 0.25em 0;
    padding: 0.35em 40px;
    position: relative;
}

blockquote:before {
    padding-left: 10px;
    content: "\201C";
    font-size: 80px;
    position: absolute;
    left: -10px;
    top: -10px;
}

blockquote cite {
}

blockquote cite div > p:before {
    content: "\2014 \2009";
}

/*
 * Carousel
*/

.carousel-fade .carousel-item {
  display: block;
  position: absolute;
  opacity: 0;
  transition: opacity 1s ease-in-out;
}
.carousel-fade .carousel-item.active {
  opacity: 1;
}
html, body, .carousel, .carousel-inner, .carousel-item {
  width: 100%;
  height: 100%;
  min-height: 220px;
}

.carousel-indicators li {
	display: content;
}

.carousel {
  position: absolute;
  top: 0;
  left: 0;
}

.onepage-tile {
    background: rgb(246, 243, 225) !important;
}

/*
 * out Carousel fade
*/
.footer {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    background: #c8b5ac;
    color: #FFFFFF;
}

.btn-donate:hover,.btn-outline-success:hover, .btn-secondary:hover {
    background-color: #ffccb3 !important;
}

.btn-secondary, .btn-donate, .btn-outline-success {
    background-color: #98838f;
    color: #f6f3e2;
    padding: .5em 1.3em;
    border: none;
    border-radius: 1em;
}

#mail-text-area {
    width: 100%;
    height: 200px;
    margin-top: 1em;
    background-color: transparent;
    border: none;
    color: #98838f;
}

input:focus,
select:focus,
textarea:focus,
button:focus {
    outline: none;
}

::-webkit-input-placeholder { /* Chrome/Opera/Safari */
    color: #98838f;
    font-weight: 100;
    font-size: .9em;
}
  

#mail-mail-area {
    width: 100%;
    background-color: transparent;
    border: none;
    color: #98838f;
}

@media screen and (min-width: 750px) {
    .body-content {
      padding: 6rem 1.5rem 0rem 1.5rem;
    }
  }

@media screen and (max-width: 750px) {
    .body-content {
      padding-top: 6em;
    }
  }


@media screen and (min-width: 0px) {
	.quotes {
	    color: #98838f;
	    font-size: 1em;
	}
}

@media screen and (min-width: 1200px) {
	.quotes {
	    font-size: 1.3em;
	}
}

@media screen and (min-width: 768px) {
  .navbar-expand-md .navbar-nav .nav-link {
    padding-right: 1.8rem;
    padding-left: 1.8rem;
  }
}

body {
    font-family: 'arconregular';
}

p {
   text-align: justify;
}

.title {
  width: 100%;
  text-align: center;
}

h1, h2, h3, h4, h5 {
    font-family: 'butlerregular';
    color: #ffccb3;
}

form.lang {
    padding-right: 1em;
    background: none;
}

select.lang {
    -webkit-appearance: none;
    border: none;
    background: none;
}

.profile {
    padding-top: 1em;
}

.profile > .title-name {
    text-align: center;
    padding-top: 1em;
}

p.profile {
    text-align: justify;
    font-size: 0.9em;
}

.profile > img {
    border-radius: 50%;
    max-width: 150px;
    max-width: 150px;
    display: block;
    margin: auto;
}

.description {
    margin-left: 10px;
    margin-right: 10px;
}

li.partner {
    padding-bottom: 0.8em;
}

/*
** FOOTER
*/

.fa {
  padding: 20px 20px 15px 20px;
  font-size: 30px;
  min-width: 50px;
  text-align: center;
  text-decoration: none;
  margin: 5px 2px;
}

.fa:hover {
    opacity: 0.7;
}

.fa-facebook {
  background: #3B5998;
  color: white;
}


.stat-row > span  {
    font-size: 1.8em;
}

.img-slide, .img-slide2 {
    width: 100%;
    height: 100%;
    background-size: cover;
    background-repeat: no-repeat;
}

/* sidebar */
.sidebar-box {
  max-height: 9.6em;
  position: relative;
  overflow: hidden;
  animation: max-height 2s;
  -o-animation: max-height 2s;
  margin-bottom: 10vh;
}

.sidebar-long {
  max-height: 70vh;
}

.sidebar-box .read-more {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  text-align: center;
  margin: 0; padding: 30px 0;

  /* "transparent" only works here because == rgba(0,0,0,0) */
  background-image: linear-gradient(to bottom, transparent, #f6f3e1);
}

.hide, .hidden {
  visibility: hidden;
}



/* circle */

.circle-header {
    text-align: left;
    margin-top: 3em !important;
}

.circle-container {
    text-align: center;  
}

.circle {
    display: table-cell;
    vertical-align: middle;
    max-width: 11em;
    max-height: 11em;
    min-width: 11em;
    min-width: 11em;
    height: 11em;
    color: #98838f;
    border: 2px solid;
    border-radius: 100%;
}

@media screen and (max-width: 780px) {
    .circle-bo {
        display: inline-block;
    }
    .circle-bo-3 {
        margin-top: -21px;
    }
    .circle {
        max-width:  9em;
        max-height: 9em;
        min-width:  9em;
        min-height: 9em;    
        height:     9em;   
    }
}


/* @resp*/
@media screen and (min-width: 780px) {
    
    .cricle-align-right {
        text-align: right;
    }

    .circle-1 {
        max-width:  13em;
        max-height: 13em;
        min-width:  13em;
        min-height: 13em;    
        height:     13em;    
    }

    .circle-2 {
        max-width:  11em;
        max-height: 11em;
        min-width:  11em;
        min-height: 11em;
        height:     11em;
    }

    .circle-3 {
        max-width:  9em;
        max-height: 9em;
        min-width:  9em;
        min-height: 9em;
        height:     9em;
    }

    .circle-bo-1 {
        left: 11em;
    }

    .circle-bo-2 {
        left: 8em;
        top: 14em;
    }

    .circle-bo-3 {
        left: 1.5em;
        top: 6.5em;
    }

    .circle-bo {
        position: absolute;
    }

}
.circle-container {
}

.circle_content {
    width: 130px; height: 50px;  
    display: inline-block;
    text-align: center;
}

.circle_content > div {
  font-size: 2em;
}

.circle_content > p {
  text-align: center;
}

.blink {
    text-transform: uppercase;
    font-size: .8em;
    border: 3px solid #ffccb3;
    border-radius: 1em;
    padding: .8em;
    color: #ffccb3;
    background-color: #f6f3e1;
}

.blink:hover {
    text-decoration: none;
    color: white;
    background-color: #ffccb3;
}

table.partner {
	width: 100%;
	height: 25%;
	padding: 10%;
}

table.partner > tbody > tr {
	display: flex;
	width: 100%;
	height: 50%;
}
table.partner > tbody > tr > td {
	width: 50%;
	display: inline-flex;
	font-size: 0.8em;
}

